[package]
name = "pallet-datahaven-native-transfer"
authors = { workspace = true }
description = "Pallet for transferring DataHaven native tokens to and from Ethereum."
edition = "2021"
license = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[lints]
workspace = true

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true, features = [ "derive" ] }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

snowbridge-core = { workspace = true }
snowbridge-outbound-queue-primitives = { workspace = true }

xcm = { workspace = true }
xcm-builder = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"snowbridge-core/std",
	"snowbridge-outbound-queue-primitives/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm/std",
	"xcm-builder/std",
	"pallet-balances/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"snowbridge-core/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-balances/try-runtime",
]