[package]
authors = { workspace = true }
description = "Common code used through the DataHaven network"
edition = { workspace = true }
name = "datahaven-runtime-common"
version = { workspace = true }

[dependencies]
codec = { workspace = true }
fp-account = { workspace = true, features = ["serde"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-chain-id = { workspace = true }
pallet-evm-precompile-proxy = { workspace = true }
pallet-migrations = { workspace = true }
pallet-safe-mode = { workspace = true }
pallet-tx-pause = { workspace = true }
pallet-treasury = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-runtime-common = { workspace = true }
precompile-utils = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true, features = ["serde"] }
sp-io = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }
sp-std = { workspace = true }
xcm = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "log/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-evm/std",
    "pallet-evm-chain-id/std",
    "pallet-evm-precompile-proxy/std",
    "pallet-migrations/std",
    "pallet-safe-mode/std",
    "pallet-tx-pause/std",
    "pallet-treasury/std",
    "polkadot-primitives/std",
    "polkadot-runtime-common/std",
    "precompile-utils/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "xcm/std",
]

runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "pallet-migrations/runtime-benchmarks",
    "pallet-safe-mode/runtime-benchmarks",
    "pallet-tx-pause/runtime-benchmarks",
    "polkadot-primitives/runtime-benchmarks",
    "polkadot-runtime-common/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

try-runtime = [
    "frame-support/try-runtime",
    "pallet-migrations/try-runtime",
    "pallet-safe-mode/try-runtime",
    "pallet-tx-pause/try-runtime",
    "pallet-timestamp/try-runtime",
    "polkadot-runtime-common/try-runtime",
    "sp-runtime/try-runtime",
]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []
